--- a/005-05-09-2025/pato-01/index.html
+++ b/005-05-09-2025/pato-01/index.html
@@ -30,5 +30,35 @@
     </nav>
     </div>
     
+    <div id="mainSlider">
+        <div id="menuBGGradient"></div>
+        <div id="mainSliderTitles">
+            <h2>
+                Welcome to
+            </h2>
+            <h2>
+                Pato place
+            </h2>
+            <div>
+                <a href="#">Look Menu</a>                
+            </div>
+        </div>
+        <div id="sliderDots">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div class="activeDot"></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div class="rightArrow">
+            <i class="fa-solid fa-angle-right"></i>
+        </div>
+
+        <div class="leftArrow">
+            <i class="fa-solid fa-angle-right"></i>
+        </div>
+    </div>
 </body>
 </html>
