--- a/007-10-09-2025/portfolio/index.html
+++ b/007-10-09-2025/portfolio/index.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/siteStyle.css">
 </head>
+
 <body>
     <nav>
-        <div>
+        <div class="logo">
             <img src="img/icons/LOGO.png" alt="">
         </div>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active-link">Home</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">About me</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact me</a></li>
         </ul>
-        <div>
+        <div class="hire-me">
             <a href="#">Hire Me</a>
         </div>
     </nav>
+
+    <section class="hi">
+        <div class="info">
+            <h1>Hi, I'm</h1>
+            <p>Mohamed Ramzy</p>
+            <h1>UI / UX designer</h1>
+            <div class="socialIcons">
+                <a href="#">
+                    <img src="img/icons/Frame 52.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/icons/Frame 53.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/icons/Frame 54.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/icons/Frame 55.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="img/Man in black suit looking confident.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
