--- a/008-12-09-2025/bs-001/003-pato.html
+++ b/008-12-09-2025/bs-001/003-pato.html
@@ -82,22 +82,25 @@
             <div class="carousel-item active"  data-bs-interval="3000">
                 <img src="img/slide1-01.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>First Welcome</h5>
+                    <p>Pato Resturant first</p>
+                    <div class="btn btn-danger">Click here</div>
                 </div>
             </div>
             <div class="carousel-item"  data-bs-interval="3000">
                 <img src="img/slide1-02.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h5>Second Welcome</h5>
+                    <p>Pato Resturant second</p>
+                    <div class="btn btn-danger">Click here</div>
                 </div>
             </div>
             <div class="carousel-item"  data-bs-interval="3000">
                 <img src="img/slide1-03.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5>Third Welcome</h5>
+                    <p>Pato Resturant third</p>
+                    <div class="btn btn-danger">Click here</div>
                 </div>
             </div>
         </div>
